--- a/client/s.css
+++ b/client/s.css
@@ -8,7 +8,7 @@ body {
     /*scroll-behavior: smooth;*/
     /*margin-top: 5em;*/
     /*background: rgba(200,200,200,1) !important;*/
-    /* filter: invert(1) !important; */
+     /*filter: invert(1) !important; */
      /*overscroll-behavior: none; */
     transition: all .5s ease !important;
     /* background: #0e0e44 !important; */
@@ -383,6 +383,9 @@ a.goto_article {
     transition: all .1s ease !important; 
     transform: scale(2) !important;
     z-index:1000 !important;
+}
+.inset {
+  box-shadow: inset 3px 3px 5px 0px rgba(0,0,0,0.75);
 }
 .pointer:active {
   box-shadow: inset 1px 1px 5px 0px rgba(0,0,0,0.75);
