--- a/client/question.jade
+++ b/client/question.jade
@@ -4,12 +4,16 @@ template(name='question_view')
     with current_doc
         .ui.stackable.padded.grid
             .row 
-                .sixteen.wide.column
+                .sixteen.wide.center.aligned.column
                     if is_editing
                         +text_edit key='title' label='title' input_class='fluid large' direct=true
                     else
                         .ui.header(class=question_header_class) #{title}
             .row 
+                .five.wide.column
+                    .ui.grey.header 
+                        i.brain.icon
+                        |auto
                 .six.wide.column
                     if url 
                         a(href=url target='_window') #{url}
@@ -19,12 +23,17 @@ template(name='question_view')
                             img.ui.rounded.image(src="{{c.url image_id gravity='face' crop='fit'}}" class='invert')
                     else if image_url
                         // a(href="/question/#{_id}/view")
-                        img.ui.pointer.image(src=image_url class=currentUser.invert_class)
+                        img.ui.pointer.rounded.inset.image(src=image_url class=currentUser.invert_class)
                 
                     if youtube_id
                         +youtube_view key='youtube_id' direct=true
                     .f12
                         |!{body}
+                    if key_value_is 'question_type' 'multiple_choice'
+                        .ui.button #{mc_option_1}
+                        .ui.button #{mc_option_2}
+                        .ui.button #{mc_option_3}
+                        .ui.button #{mc_option_4}
                     +comments
                     .ui.button.add_answer
                         i.plus.icon 
@@ -48,20 +57,25 @@ template(name='question_view')
                     div
                     .ui.segment
                         .ui.grey.header 
+                            i.eye.icon
+                            |visible
+                        +kve k='vis' v='public'
+                        +kve k='vis' v='friends'
+                        +kve k='vis' v='list'
+                    .ui.segment
+                        .ui.grey.inline.header 
                             i.hand.holding.heart.icon
                             |bounties
                         .ui.circular.icon.button.add_bounty(title='add bounty')
                             i.plus.icon
                         each question_bounties
                             +question_bounty
-                .five.wide.column
                     .ui.segment
-                        .ui.grey.header 
+                        .ui.grey.inline.header 
                             i.fork.icon
                             |dependencies
-                        .ui.button.add_dependency
+                        .ui.circular.icon.button.add_dependency(title='add dependency')
                             i.plus.icon
-                            |add dependency
                         .ui.selection.link.large.list
                             each dependencies
                                 a.item(href="/question/#{_id}/view") #{title}
