--- a/client/fields.jade
+++ b/client/fields.jade
@@ -277,15 +277,14 @@ template(name='i')
     // img.icon8(src="https://img.icons8.com/ios/50/000000/#{name}.png" class=cl title=title)
     // img(src="https://img.icons8.com/ultraviolet/48/000000/#{name}.png" class=cl title=title)
     // img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=cl title=title)
-    // img(src="https://img.icons8.com/fluent/48/000000/#{name}.png" class=cl title=title)
-    // if classes.length
+    // if cl.length
     //     img(src="https://img.icons8.com/#{gs.icon_theme}/48/000000/#{name}.png" class=cl title=title)
     // else 
     //     img.ui.mini.inline.image(src="https://img.icons8.com/#{gs.icon_theme}/48/000000/#{name}.png" class=cl title=title)
     // img(src="https://img.icons8.com/plasticine/48/000000/#{name}.png" class=cl title=title)
 template(name='ismall')
-    img(src="https://img.icons8.com/pastel-glyph/24/000000/#{name}.png" class=classes title=title)
-    //- img(src="https://img.icons8.com/ultraviolet/24/000000/#{name}.png" class=classes title=title)
+    img(src="https://img.icons8.com/pastel-glyph/24/000000/#{name}.png" class=cl title=title)
+    //- img(src="https://img.icons8.com/ultraviolet/24/000000/#{name}.png" class=cl title=title)
     
 template(name='ioffice')
     img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=cl title=title)
@@ -356,7 +355,7 @@ template(name='image_view')
         //-     |#{key}
         //- else
         //-     |#{this}
-        //- if classes
+        //- if cl
         //-     img(src="{{c.url field_value gravity='face' crop='fit'}}" class=cl)
         //- else 
         a(href="{{c.url field_value }}" target='_window')
@@ -600,21 +599,21 @@ template(name='child_view')
 
 template(name='boolean_edit')
     //- div
-    .ui.circular.button.toggle_boolean(class="#{boolean_toggle_class} #{classes}" title=tooltip)
+    .ui.circular.button.toggle_boolean(class="#{boolean_toggle_class} #{cl}" title=tooltip)
         if field_value
             i.green.checkmark.large.invert.icon
         else
             i.circle.outline.icon
         //- .ui.compact.button.toggle_boolean(class=boolean_toggle_class)
-        if icon
-            +icon name=icon cl='ui avatar image'
+        if i
+            +icon name=i cl='ui avatar image'
         .inline.f12
             //- if field_value
             //-     i.checkmark.icon
-            if label
-                |#{label}
-            else if key
-                |#{key}
+            if l
+                |#{l}
+            else if k
+                |#{k}
             else
                 |#{this}
         div
