--- a/client/question_edit.jade
+++ b/client/question_edit.jade
@@ -9,67 +9,65 @@ template(name='question_edit')
                         small edit question
                         // |#{title}
                 .twelve.wide.column
-                    +text_edit key='title' l='title' input_class='fluid large' direct=true
+                    +text_edit k='title' l='title' input_class='fluid large' d=true
             .row 
                 .five.wide.column
                     div
-                    +boolean_edit key='has_image' l='has image' direct=true
+                    +boolean_edit k='has_image' l='has image' d=true
                     if has_image
-                        +image_edit key='image_id' l='image' direct=true
-                        +text_edit key='image_url' l='image link' direct=true
+                        +image_edit k='image_id' l='image' d=true
+                        +text_edit k='image_url' l='image link' d=true
                     div
-                    +kve key='question_type' v='boolean' l='boolean' i='toggle on'
-                    +kve key='question_type' v='multiple_choice' l='multiple choice' i='list'
-                    +kve key='question_type' v='open' l='open' i='text width'
+                    +kve k='question_type' v='boolean' l='boolean' i='toggle on'
+                    +kve k='question_type' v='multiple_choice' l='multiple choice' i='list'
+                    +kve k='question_type' v='open' l='open' i='text width'
                     div
                     if key_value_is 'question_type' 'multiple_choice'
                         .ui.dividing.header multiple choice
                         div
-                        +text_edit key='mc_option_1' l='option 1' direct=true
+                        +text_edit k='mc_option_1' l='option 1' d=true
                         div
-                        +text_edit key='mc_option_2' l='option 2' direct=true
+                        +text_edit k='mc_option_2' l='option 2' d=true
                         div
-                        +text_edit key='mc_option_3' l='option 3' direct=true
+                        +text_edit k='mc_option_3' l='option 3' d=true
                         div
-                        +text_edit key='mc_option_4' l='option 4' direct=true
+                        +text_edit k='mc_option_4' l='option 4' d=true
                         
                     if key_value_is 'question_type' 'open'
                         .ui.dividing.header open answer
-                        +kve key='open_answer_type' v='text' l='text' i='header'
-                        +kve key='open_answer_type' v='number' l='number' i='hashtag'
-                        +kve key='open_answer_type' v='list' l='list' i='list'
+                        +kve k='open_answer_type' v='text' l='text' i='header'
+                        +kve k='open_answer_type' v='number' l='number' i='hashtag'
+                        +kve k='open_answer_type' v='list' l='list' i='list'
                         
-                    // +kve key='question_type' v='open' l='open'
-                .six.wide.column
-                    +html_edit key='body' l='body' direct=true
-                    // +number_edit key='bounty_total' l='total bounty' direct=true
+                    // +kve k='question_type' v='open' l='open'
+                .ten.wide.column
+                    +boolean_edit k='has_description' l='has description' d=true
+                    if has_description
+                        +html_edit k='description' l='description' d=true
+                    // +number_edit k='bounty_total' l='total bounty' d=true
                     // div
-                    // +number_edit key='points_per_answer' l='points per answer' direct=true
+                    // +number_edit k='points_per_answer' l='points per answer' d=true
                     // div
-                    // +number_edit key='bounties_available' l='bounties available' direct=true
+                    // +number_edit k='bounties_available' l='bounties available' d=true
                     // .ui.header subtotal = points/answer*bounties = #{subtotal}pts
                     div
-                .five.wide.column
-                    +boolean_edit key='has_recipient' l='has recipient' direct=true
+                    +boolean_edit k='has_recipient' l='has recipient' d=true
                     if has_recipient
-                        +single_user_edit key='recipient_id' key2='recipient_username' l='recipient' direct=true
+                        +single_user_edit k='recipient_id' key2='recipient_username' l='recipient' d=true
                     // div
-                    // +number_edit key='point_amount' l='point amount' direct=true
+                    // +number_edit k='point_amount' l='point amount' d=true
                     div
-                    +boolean_edit key='has_link' l='has link' direct=true
+                    +boolean_edit k='has_link' l='has link' d=true
                     if has_link
-                        +link_edit key='link' l='link' direct=true
-                    +boolean_edit key='has_enddate' l='has enddate' direct=true
+                        +link_edit k='link' l='link' d=true
+                    +boolean_edit k='has_enddate' l='has enddate' d=true
                     if has_enddate
-                        +date_edit key='date' l='date' direct=true
+                        +date_edit k='date' l='date' d=true
                     // |tag = -1p
                     div
                     +smart_tagger
-                    div
-                    if description
-                        +html_edit key='description' l='description' direct=true
-                    +boolean_edit key='has_youtube' l='has video' direct=true
+                    +boolean_edit k='has_youtube' l='has video' d=true
                     if has_youtube
-                        +youtube_edit key='youtube_id' l='youtube id' direct=true
+                        +youtube_edit k='youtube_id' l='youtube id' d=true
                     i.remove.link.circular.big.icon.delete_question(title='delete question')
                     
